test/forgetSynthesis5.slq

def foo(x:𝔹){
	r:=dup(x); /// error
	if measure(H(0)){
		return x;
	}
	return r;
}
